fixed problems with wb-tables on index pages

--- a/cvpWebApi/Views/Home/IndexEN.cshtml
+++ b/cvpWebApi/Views/Home/IndexEN.cshtml
@@ -5,17 +5,16 @@
 <div id="body">
     <section class="featured">
         <div class="content-wrapper">
-            <hgroup class="title">
                 <h1>Canada Vigilance Adverse Reaction Database - APIs</h1>
-            </hgroup>
-            <table class="table table-striped table-hover">
+            <table class="wb-tables table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>
                             Request by:
                         </th>
-                        <th scope=colgroup colspan=2>
-                            Format:
+                        <th></th>
+                        <th>
+                            Format:</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -89,12 +88,6 @@
                         <td><a class="btn btn-default" href="./api/reportinfo/?type=json">Json</a></td>
                         <td><a class="btn btn-default" href="./api/reportinfo/?type=xml">XML</a></td>
                     </tr>
-                    <!--<tr>
-                        <td>All Report Info by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href='./api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href = './api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
-                    </tr>-->
-
                 </tbody>
             </table>
 
