--- a/cvpWebApi/Views/Home/IndexFR.cshtml
+++ b/cvpWebApi/Views/Home/IndexFR.cshtml
@@ -5,17 +5,16 @@
 <div id="body">
     <section class="featured">
         <div class="content-wrapper">
-            <hgroup class="title">
                 <h1>Base de données en ligne des effets indésirables de Canada Vigilance - APIs</h1>
-            </hgroup>
             <table class="wb-tables table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>
                             Requête par :
                         </th>
-                        <th scope=colgroup colspan=2>
-                            Format :
+                        <th></th>
+                        <th>
+                            Format :</th>
                     </tr>
                 </thead>
                 <tbody>
