--- a/cvpWebApi/Views/Home/IndexFR.cshtml
+++ b/cvpWebApi/Views/Home/IndexFR.cshtml
@@ -5,7 +5,14 @@
 <div id="body">
     <section class="featured">
         <div class="content-wrapper">
-                <h1>Base de données en ligne des effets indésirables de Canada Vigilance - APIs</h1>
+            <h1>Base de données en ligne des effets indésirables de Canada Vigilance</h1>
+            <p>La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.</p>
+            <a href="#">Search Adverse Reaction Online Database</a> -
+            <a href="./Reference">Canada Vigilance Adverse Reaction Database API Guide</a>
+            <h2>Licence:</h2>
+
+            <a href="http://open.canada.ca/fr/licence-du-gouvernement-ouvert-canada">Licence du gouvernement ouvert - Canada</a>
+            <h2>Ressources de l'ensemble de données</h2>
             <table class="wb-tables table table-striped table-hover">
                 <thead>
                     <tr>
