--- a/cvpWebApi/Views/Home/IndexEN.cshtml
+++ b/cvpWebApi/Views/Home/IndexEN.cshtml
@@ -5,7 +5,15 @@
 <div id="body">
     <section class="featured">
         <div class="content-wrapper">
-                <h1>Canada Vigilance Adverse Reaction Database - APIs</h1>
+            <h1>Canada Vigilance Adverse Reaction Database</h1>
+            <p>The Canada Vigilance Adverse Reaction Online Database contains information about suspected adverse reactions (also known as side effects) to health products.</p>
+            <a href="./SearchReport">Search Adverse Reaction Online Database</a> -
+            <a href="./Reference">Canada Vigilance Adverse Reaction Database API Guide</a>
+            <h2>Licence:</h2>
+
+            <a href="http://open.canada.ca/en/open-government-licence-canada">Open Government Licence - Canada</a>
+
+            <h2>Dataset Resources</h2>
             <table class="wb-tables table table-striped table-hover">
                 <thead>
                     <tr>
@@ -30,8 +38,8 @@
                     </tr>
                     <tr>
                         <td>Gender:</td>
-                        <td> <a class="btn btn-default" href="./api/genderlx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/genderlx/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="/api/genderlx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="/api/genderlx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Outcome:</td>
