--- a/cvpWebApi/Views/Home/SearchResultEn.cshtml
+++ b/cvpWebApi/Views/Home/SearchResultEn.cshtml
@@ -15,18 +15,18 @@
                     You can also learn about how <a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/inspecting-monitoring-inspection-controle/inspections/about-clinical-trials-au-sujet-essais-cliniques-eng.php#s1
         ">clinical trial inspections</a> are conducted in Canada and <a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/inspecting-monitoring-inspection-controle/inspections/about-clinical-trials-au-sujet-essais-cliniques-eng.php#s3">what inspectors look for</a>.
                 </p>*@
-                <table class="wb-tables table table-striped table-hover table-bordered">
+                <table @*class="wb-tables table table-striped table-hover table-bordered"*@ id="tbodyMain">
                     <thead>
                         <tr class="active">
-                            <th>Control number</th>
-                            <th>Sponsor name</th>
+                            <th>Report ID</th>
+                            @*<th>Sponsor name</th>
                             <th>Region</th>
                             <th>Inspection start date</th>
                             <th>Drug name</th>
                             <th>Trial phase</th>
-                            <th>Rating</th>
+                            <th>Rating</th>*@
                     </thead>
-                    <tbody id="tbodyMain"></tbody>
+                    @*<tbody id="tbodyMain"></tbody>*@
                 </table>
             </div>
         </section>
@@ -68,29 +68,73 @@
         var searchUrl2 = '/Home/SearchResultEn?lang=en&brandName=' + brandName;
 
         $("a#langLink").attr('href', langUrl);
-        //$("tbodyMain").load('www.google.com', function () {
-        //    alert("Load was performed.");
+
+        //$(document).ready(function () {
+        //    alert('call the AJAX function');
+        //    $.ajax({
+        //        //url: 'Url.Action("SearchResultEn", "HomeController")',
+        //        url: searchUrl2,
+        //        dataType: "json",
+        //        //type: 'post',
+        //        success: function(data){
+        //            alert('i got success');
+        //            //alert(data.value);
+        //            //$('#tbodyMain').dataTable({
+        //            //    data: data,
+        //            //    columns: [
+        //            //        { 'data': 'ReportId' },
+        //            //    ]
+        //            //});
+        //            window["wb-tables"] = {
+        //                "processing": true,
+        //                "columns": [
+        //                    { "data": "ReportId" }
+        //                ]
+        //            }
+        //            //alert(item);                    
+        //        },
+        //        error: function(){
+        //            alert('i got an error');
+        //        }
+        //    });
+        //    //alert ('after ajax call, in ready function')
         //});
 
-        $(document).ready(function () {
-            alert('call the AJAX function');
-            $.ajax({
-                @*url: '@Url.Action("SearchResultEn", "HomeController")',*@
-                url: searchUrl2,
-                //dataType: 'json',
-                //type: 'post',
-                success: function(data){
-                    alert('i got success');
-                    alert(data.count);
-                },
-                error: function(){
-                    alert('i got an error');
-                }
-            });
-            alert ('after ajax call, in ready function')
-        });
+    $(document).ready(function () {
+        alert('call the AJAX function');
+        window["wb-tables"] = {
+            "processing": true,
+            "ajax": {
+                    "dataType": 'json',
+                    "url": searchUrl2,
+                    "success": function(data) {
+                        alert('i got success');
+                    },
+                    "error": function () {
+                        alert('i got an error in my ajax call');
+                    }
 
-        alert('outside and after the ready function');
+            },
+            "error": function () {
+                alert('i got an error in the datatable processing');
+            },
+            "columns": [
+                { "data": "ReportId" }
+            ]
+        }
+    });
+
+    //$(document).ready(function () {
+    //    alert('call the AJAX function');
+    //    $('#tbodyMain').dataTable({
+    //        "ajax": searchUrl2,
+    //        "columns": [
+    //            { "data": "ReportId" }
+    //        ]
+
+    //    });
+    //});
+
 
         //if (cat == '1') {
         //    $('#title').text('Clinical trial inspections search results');
@@ -102,7 +146,6 @@
         //    $('#subParam1').text('Below are the results for non-compliant clinical trial inspections.');
         //    $('#subParam2').html('You can also learn about what <a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/inspecting-monitoring-inspection-controle/inspections/about-clinical-trials-au-sujet-essais-cliniques-eng.php#s4b">non-compliant clinical trial inspections</a> involve.');
         //}
-
 
         //window["wb-tables"] = {
         //    "processing":true,
@@ -122,7 +165,7 @@
         //                        {
         //                            "data": "insStartDate",
         //                            "render": function (data, type, full, meta) {
-        //                                return formatedDate(data);
+        //                                return formatdate(data);
         //                            }
         //                        },
         //                        { "data": "drugName" },
