changed connection to the api.

--- a/cvpWebApi/Views/Home/IndexEN.cshtml
+++ b/cvpWebApi/Views/Home/IndexEN.cshtml
@@ -38,8 +38,8 @@
                     </tr>
                     <tr>
                         <td>Gender:</td>
-                        <td> <a class="btn btn-default" href="/api/genderlx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="/api/genderlx/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api/genderlx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api/genderlx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Outcome:</td>
