Added french pages and biliangual values in class and controllers.

--- a/cvpWebApi/Views/Home/IndexEN.cshtml
+++ b/cvpWebApi/Views/Home/IndexEN.cshtml
@@ -28,23 +28,23 @@
                 <tbody>
                     <tr>
                         <td>Drug product ingredients:</td>
-                        <td><a class="btn btn-default" href="./api/drugproductingredient/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/drugproductingredient/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api/drugproductingredient/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api/drugproductingredient/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Drug Products:</td>
-                        <td> <a class="btn btn-default" href="./api/drugproduct/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/drugproduct/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api/drugproduct/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api/drugproduct/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Gender:</td>
-                        <td> <a class="btn btn-default" href="./api/genderlx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/genderlx/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api/genderlx/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api/genderlx/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Outcome:</td>
-                        <td> <a class="btn btn-default" href="./api/outcomelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/outcomelx/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api/outcomelx/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api/outcomelx/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Reactions:</td>
