Added some navigation buttons and fixes to French sections.

--- a/cvpWebApi/Views/Home/IndexFR.cshtml
+++ b/cvpWebApi/Views/Home/IndexFR.cshtml
@@ -27,85 +27,85 @@
                 <tbody>
                     <tr>
                         <td>Produits pharmaceutiques :</td>
-                        <td> <a class="btn btn-default" href="./api/drugproduct/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/drugproduct/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/drugproduct/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproduct/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Ingredient de produits pharmaceutiques :</td>
-                        <td><a class="btn btn-default" href="./api/drugproductingredient/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/drugproductingredient/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?type=xml">XML</a></td>
                     </tr>
 
                     <tr>
                         <td>Gender_fr:</td>
-                        <td> <a class="btn btn-default" href="./api/genderlx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/genderlx/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/genderlx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/genderlx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Outcome_fr:</td>
-                        <td> <a class="btn btn-default" href="./api/outcomelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/outcomelx/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/outcomelx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/outcomelx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Réactions:</td>
-                        <td> <a class="btn btn-default" href="./api/reactions/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reactions/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/reactions/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reactions/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Drug_fr:</td>
-                        <td> <a class="btn btn-default" href="./api/reportdrug/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportdrug/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/reportdrug/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrug/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Drug Indication_fr:</td>
-                        <td><a class="btn btn-default" href="./api/reportdrugindication/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportdrugindication/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrugindication/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrugindication/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Links_fr:</td>
-                        <td><a class="btn btn-default" href="./api/reportlinks/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportlinks/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportlinks/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportlinks/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Type Lx_fr:</td>
-                        <td><a class="btn btn-default" href="./api/reporttypelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reporttypelx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reporttypelx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reporttypelx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Rapport :</td>
-                        <td><a class="btn btn-default" href="./api/report/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/report/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/?type=xml">XML</a></td>
                     </tr>
                    <!-- <tr>
                         <td>Rapport par id = 1:</td>
-                        <td><a class="btn btn-default" href="./api/report/1/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/report/1/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/1/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/1/?type=xml">XML</a></td>
                     </tr>-->
 
                     <!--<tr>
                         <td>Rapport par nom de produit :<input type="text" id="strDrugName" size="15" /></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href='./api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href = './api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
                     </tr>-->
                     <tr>
                         <td>Seriousness Lx_fr:</td>
-                        <td><a class="btn btn-default" href="./api/seriousnesslx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/seriousnesslx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/seriousnesslx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/seriousnesslx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Source Lx_fr:</td>
-                        <td><a class="btn btn-default" href="./api/sourcelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/sourcelx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/sourcelx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/sourcelx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>All Report Info_fr:</td>
-                        <td><a class="btn btn-default" href="./api/reportinfo/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportinfo/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?type=xml">XML</a></td>
                     </tr>
                     <!--<tr>
                         <td>All Report Info by Drug Name_fr:<input type="text" id="strDrugName" size="15" /></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href='./api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href = './api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
                     </tr>-->
                 </tbody>
             </table>
