--- a/cvpWebApi/Views/Home/IndexEN.cshtml
+++ b/cvpWebApi/Views/Home/IndexEN.cshtml
@@ -28,73 +28,73 @@
                 <tbody>
                     <tr>
                         <td>Drug product ingredients:</td>
-                        <td><a class="btn btn-default" href="./api/drugproductingredient/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/drugproductingredient/?lang=en&type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Drug Products:</td>
-                        <td> <a class="btn btn-default" href="./api/drugproduct/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/drugproduct/?lang=en&type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Gender:</td>
-                        <td> <a class="btn btn-default" href="./api/genderlx/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/genderlx/?lang=en&type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/genderlx/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/genderlx/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Outcome:</td>
-                        <td> <a class="btn btn-default" href="./api/outcomelx/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/outcomelx/?lang=en&type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/outcomelx/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/outcomelx/?lang=en&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Reactions:</td>
-                        <td> <a class="btn btn-default" href="./api/reactions/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reactions/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/reactions/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reactions/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Drug:</td>
-                        <td> <a class="btn btn-default" href="./api/reportdrug/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportdrug/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/reportdrug/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrug/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Drug Indication:</td>
-                        <td><a class="btn btn-default" href="./api/reportdrugindication/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportdrugindication/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrugindication/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrugindication/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Links:</td>
-                        <td><a class="btn btn-default" href="./api/reportlinks/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportlinks/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportlinks/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportlinks/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Type Lx:</td>
-                        <td><a class="btn btn-default" href="./api/reporttypelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reporttypelx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reporttypelx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reporttypelx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Reports:</td>
-                        <td><a class="btn btn-default" href="./api/report/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/report/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/?type=xml">XML</a></td>
                     </tr>
                    <!-- <tr>
                         <td>All Report by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href='./api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href = './api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
                     </tr>-->
                     <tr>
                         <td>Seriousness Lx:</td>
-                        <td><a class="btn btn-default" href="./api/seriousnesslx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/seriousnesslx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/seriousnesslx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/seriousnesslx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Source Lx:</td>
-                        <td><a class="btn btn-default" href="./api/sourcelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/sourcelx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/sourcelx/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/sourcelx/?type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>All Report Info:</td>
-                        <td><a class="btn btn-default" href="./api/reportinfo/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api/reportinfo/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?type=xml">XML</a></td>
                     </tr>
                 </tbody>
             </table>
