Renamed all the fields to follow standard.

--- a/cvpWebApi/Views/Home/IndexEN.cshtml
+++ b/cvpWebApi/Views/Home/IndexEN.cshtml
@@ -27,74 +27,70 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Drug product ingredients:</td>
+                        <td>Drug product ingredient:</td>
                         <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Drug Products:</td>
                         <td> <a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Gender:</td>
-                        <td> <a class="btn btn-default" href="./api-v1/genderlx/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/genderlx/?lang=en&type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/gender/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/gender/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Outcome:</td>
-                        <td> <a class="btn btn-default" href="./api-v1/outcomelx/?lang=en&type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/outcomelx/?lang=en&type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/outcome/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/outcome/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
-                        <td>Reactions:</td>
-                        <td> <a class="btn btn-default" href="./api-v1/reactions/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/reactions/?type=xml">XML</a></td>
+                        <td>Reaction:</td>
+                        <td> <a class="btn btn-default" href="./api-v1/reaction/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reaction/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>Report Drug:</td>
-                        <td> <a class="btn btn-default" href="./api-v1/reportdrug/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/reportdrug/?type=xml">XML</a></td>
+                        <td> <a class="btn btn-default" href="./api-v1/reportdrug/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportdrug/?lang=fr&type=xml">XML</a></td>
+                    </tr>
+                    
+                    <tr>
+                        <td>Report Link:</td>
+                        <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
-                        <td>Report Drug Indication:</td>
-                        <td><a class="btn btn-default" href="./api-v1/reportdrugindication/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/reportdrugindication/?type=xml">XML</a></td>
+                        <td>Report Type:</td>
+                        <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
-                        <td>Report Links:</td>
-                        <td><a class="btn btn-default" href="./api-v1/reportlinks/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/reportlinks/?type=xml">XML</a></td>
+                        <td>Report:</td>
+                        <td><a class="btn btn-default" href="./api-v1/report/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/report/?lang=fr&type=xml">XML</a></td>
                     </tr>
-                    <tr>
-                        <td>Report Type Lx:</td>
-                        <td><a class="btn btn-default" href="./api-v1/reporttypelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/reporttypelx/?type=xml">XML</a></td>
-                    </tr>
-                    <tr>
-                        <td>Reports:</td>
-                        <td><a class="btn btn-default" href="./api-v1/report/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/report/?type=xml">XML</a></td>
-                    </tr>
-                   <!-- <tr>
+                   <tr>
                         <td>All Report by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                        <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
-                    </tr>-->
-                    <tr>
-                        <td>Seriousness Lx:</td>
-                        <td><a class="btn btn-default" href="./api-v1/seriousnesslx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/seriousnesslx/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=en&type=json'">Json</a></td>
+                        <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=fr&type=xml'">XML</a></td>
                     </tr>
                     <tr>
-                        <td>Source Lx:</td>
-                        <td><a class="btn btn-default" href="./api-v1/sourcelx/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/sourcelx/?type=xml">XML</a></td>
+                        <td>Seriousness:</td>
+                        <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=fr&type=xml">XML</a></td>
+                    </tr>
+                    <tr>
+                        <td>Source:</td>
+                        <td><a class="btn btn-default" href="./api-v1/source/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/source/?lang=fr&type=xml">XML</a></td>
                     </tr>
                     <tr>
                         <td>All Report Info:</td>
-                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?type=json">Json</a></td>
-                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?type=xml">XML</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=en&type=json">Json</a></td>
+                        <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=fr&type=xml">XML</a></td>
                     </tr>
                 </tbody>
             </table>
